# Utility-python-library

./: .gitignore  API.md  MANIFEST.in  README.md  THIRD_PARTY.md  conftest.py  pyproject.toml  repo.md  text_from_image.py  third_party.txt  wrapper.py
freeai_utils/: __init__.py  _setup.py  apiClient.py  audio_record.py  audio_to_text_vn.py  audio_to_text_vosk.py  audio_to_text_whisper.py  clean_text_for_tts.py  cleaner.py  cli.py  decider.py  document_filter.py  geminiAPI.py  google_search.py  image_creator.py  image_to_text.py  language_detection.py  live_stt_vosk.py  localLLM.py  log_set_up.py  pdf_docx_reader.py  scripts.py  text_from_image_easyocr.py  text_to_speech_gtts.py  text_to_speech_pyttsx3.py  utils.py  wrapper.py
freeai_utils/built_model/: check.py
test/: check.py
tests/: test_apiClient.py  test_audio_record.py  test_audio_to_text_vn.py  test_audio_to_text_whisper.py  test_clean_text_for_tts.py  test_decider.py  test_document_filter.py  test_google_search.py  test_image_creator.py  test_image_to_text.py  test_language_detection.py  test_live_stt_vosk.py  test_localLLM.py  test_pdf_docx_reader.py  test_text_from_image_easyocr.py  test_utils.py
tests/sample/: sample.docx  sample.txt  sample2.docx  sample3.docx
utils/: audio_record.py  audio_to_text_whisper.py  clean_text_for_tts.py  geminiAPI.py  image_to_text.py  language_detection.py  text_from_image.py  text_from_image_easyocr.py  text_to_speech_gtts.py  text_to_speech_pyttsx3.py  wav_recording.py
