[project]
name = "freeai-utils"
version = "0.5.6"
description = "A free, zero-config AI utility toolkit with voice, text, image, and web integrations, pdf_docx readability, decider"
authors = [
    { name="truongbaan", email="truongbaansoftware@gmail.com" }
]
readme = "README.md"
license =  "MIT" 
requires-python = ">=3.9.13"

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy",
    "keyboard",
    "lameenc",
    "openai-whisper",
    "librosa",
    "google-genai",
    "pyperclip",
    "python-dotenv",
    "googlesearch-python",
    "requests",
    "beautifulsoup4",
    "readability-lxml",
    "transformers",
    "Pillow",
    "easyocr",
    "gTTS",
    "playsound==1.2.2",  # required specific version
    "pyttsx3",
    "pymupdf",
    "pypdf",
    "pdfplumber",
    "python-docx",
    "mutagen",
    "haystack-ai",
    "langdetect",
    "translators",
    "ffmpeg-python",
    "imageio-ffmpeg",
    "accelerate",
    "sentencepiece",
    "tiktoken",
    "click",
    "hf_xet",
    "diffusers",
    "sounddevice",
    "vosk",
    "protobuf", # for mbart fast
    "peft", #for lora
]

[project.urls]
Homepage = "https://github.com/truongbaan/Utility-python-library"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["freeai_utils"]

[tool.setuptools.package-data]
"*" = ["README.md", "API.md", "THIRD_PARTY.md"]

[project.scripts]
freeai-utils = "freeai_utils.cli:main"
